--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,6 +9,7 @@ html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+      background: #3F4C6B;
 }
 body {
   margin: 0;
