--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -903,7 +903,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
+  color: #fff;
   background: #2c539e; /* Old browsers */
 background: -moz-linear-gradient(-45deg, #2c539e 0%, #2c539e 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#2c539e), color-stop(100%,#2c539e)); /* Chrome,Safari4+ */
